2010-03-28  Matthew Mundell <matthew.mundell@intevation.de>

	Add basic task editing.

	* src/html/src/gsad.xsl (autorefresh [html-header-meta]): Only add header
	if interval is above 0.

	* src/html/src/omp.xsl (html-task-table): Widen actions column.
	(html-edit-task-form, edit_task, modify_task_response): New templates.
	(task): Add edit task button.

	* src/gsad.c (init_validator): Add edit_task and save_task commands.
	(exec_omp_get): Add edit_task and save_task handling.

	* src/gsad_omp.c (edit_task_omp, save_task_omp): New functions.
	(get_status): Always send the refresh interval, even when 0.

	* src/gsad_omp.h: Add headers accordingly.

2010-03-28  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (gsad_newtask): Add comment entry.

	* src/gsad.c (exec_omp_post): Pass comment from request to
	create_task_omp.

2010-03-28  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-report-table): Add comment field.
	(task): Add comment under name.

2010-03-28  Matthew Mundell <matthew.mundell@intevation.de>

	Display schedule intervals in unit format.

	* src/html/src/omp.xsl (interval-with-unit): New template.
	(schedule): Call interval-with-unit for intervals.
	(schedule [details]): Display unit interval instead of just seconds.

2010-03-27  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-create-schedule-form): Add odd row
	background colours.  Switch period and duration input to time and unit
	dropdowns.
	(html-schedules-table): Remove "(s)" from period heading.
	(schedule): Include period months.  Add unit to period cells.  Shorten
	entire duration text.

	* src/gsad.c (init_validator): Add calendar_unit rule and duration_unit
	and period_unit aliases.
	(struct req_parms): Add duration_unit and period_unit.
	(free_resources): Free duration_unit and period_unit.
	(serve_post): Also pass units to create_schedule_omp.
